--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
   "author": "Haoqun Jiang <sodazju+npm@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "encoding": "^0.1.11",
+    "encoding": "^0.1.12",
     "jschardet": "^1.4.1"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
-    "babel-cli": "^6.3.15",
-    "babel-eslint": "^4.1.6",
-    "babel-preset-es2015-node4": "^2.0.2",
-    "eslint": "^1.10.2",
-    "eslint-config-soda": "^0.2.0",
-    "eslint-plugin-react": "^3.11.2",
-    "tape": "^4.2.2"
-  }
+    "babel": "^6.5.2",
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015-node4": "^2.1.0",
+    "eslint": "^2.8.0",
+    "eslint-config-soda": "^3.0.0",
+    "eslint-plugin-react": "^5.0.1",
+    "tape": "^4.5.1"
+  },
+  "files": [
+    "release/index.js"
+  ]
 }
